# crpc

./: .clang-tidy  .gitmodules  .pkg  CMakeLists.txt  Client.cpp  Client.h  Server.cpp  Server.h  client-main.cpp  client.cpp  readme.md  server-main.cpp  server.cpp  server.h
.github/workflows/: linux.yml  windows.yml
benchmarks/: benchmark.py  ctx-client  ctx-server  data.py  graph.py  single-thread-client  single-thread-server
cmake/: pkg.cmake
coroutines/: CMakeLists.txt  app.cpp  app.hpp  connection.cpp  connection.hpp  main.cpp  server.cpp  server.hpp  states.hpp
coroutines/config/: CMakeLists.txt
coroutines/util/: CMakeLists.txt  net.hpp
coroutines/util/detail/: async_queue_impl.hpp
example/: async_client.cc  async_websocket_client.cc  benchmark.cpp  benchmark.h  benchmark_interface.h  client.cc  client_benchmarks.cc  example_interface.h  mqtt-client.cpp  mqtt-server.cpp  no_network.cpp  server.cc  websocket_async_client.cc  websocket_async_net_client.cc  websocket_async_net_server.cc  websocket_async_server.cc  websocket_async_thread_client.cc  websocket_async_thread_server.cc  websocket_server.cc
example/http_ws/: http_ws_server.cc  http_ws_server.cpp  rpc_http_client.cpp  rpc_ws_client.cpp
example/mqtt/: mqtt-client.cpp  mqtt-server.cc  mqtt-server.cpp
example/no_network/: no_network.cc  no_network.cpp  no_network_test.cpp
include/: ws_client.h
include/crpc/: client.h  deserialize_helper.h  log.h  message.h  no_network_client.h  no_network_server.h  receiver.h  rpc_asio_client.h  rpc_asio_server.h  rpc_async_asio_client.h  rpc_async_client.h  rpc_async_thread_websocket_client.h  rpc_async_thread_websocket_server.h  rpc_async_websocket_client.h  rpc_async_websocket_net_client.h  rpc_async_websocket_net_server.h  rpc_async_websocket_server.h  rpc_client.h  rpc_fn.h  rpc_mqtt_server.h  rpc_mqtt_transport.h  rpc_server.h  rpc_websocket_server.h  server.h  ticket_store.h  tuple_deserialize.h
include/crpc/http/: http_ws_server.h  rpc_http_client.h  rpc_ws_client.h
include/crpc/http2/: http2_client.h  http2_server.h
include/crpc/mqtt/: mqtt_client_handler.h  mqtt_server_handler.h  mqtt_utils.h  rpc_mqtt_server.h  rpc_mqtt_transport.h
include/crpc/no_network/: no_network_client.h  no_network_server.h
include/crpc/serialization/: cista.h  glaze_binary.h  glaze_json.h  no_serialization.h  tuple_serialization.h  zpp_bits_serialization.h
src/: client.cc  server.cc  ws_client.cc  ws_client.cpp
src/benchmark/: bench.h  benchmark.cc  benchmark_custom.h  benchmark_interface.h  benchmark_operations.h  no_serializer_bench.h
test/: first_test.cc  no_network_test.cc
test/http2/: http2_client.cc  http2_server.cc
test/http_ws/: http_ws_server.cc  rpc_http_client.cc  rpc_ws_client.cc
test/mqtt/: mqtt-client.cc  mqtt-server.cc
